--- a/docs/1.DID规范.md
+++ b/docs/1.DID规范.md
@@ -6,9 +6,17 @@ DID 是一个简单的文本字符串，由三部分组成
 - DID 方法的标识符
 - DID 方法特定的标识符
 
-```scheme:method:method-specific```
+```scheme:method-name:method-specific-id```
 
 ## DID URL
+| 项| 规则 | 注释|
+| ---- | ---- | ---- |
+|did|"did:" method-name ":" method-specific-id"||
+|method-name|1*method-char||
+|method-char|%x61-7A / DIGIT|小写ASCII字母,数字（0-9）|
+|method-specific-id|\*(\* idchar ":" ) 1*idchar||
+|idchar|ALPHA / DIGIT / "." / "-" / "_" / pct-encoded|大写和小写ASCII字母,数字（0-9）,.,-,_,pct-encoded|
+|pct-encoded|"%" HEXDIG HEXDIG|转义字符|
 路径
 - did:example:123456/path
 查询
@@ -16,4 +24,6 @@ DID 是一个简单的文本字符串，由三部分组成
 片段
 - did:example:123#public-key-0
 - id:example:123?service=agent&relativeRef=/credentials
+
+[ASCII](https://baike.baidu.com/item/ASCII/309296)
 ## DID文档
